# dbus-python

./: .gitlab-ci.yml  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  Makefile.am  NEWS  README.md  config.h.cmake  configure.ac
cmake/: FindDBUS.cmake  FindGLIB.cmake
dbus/: service.py
dbus-gmain/: dbus-gmain.h
dbus_bindings/: abstract.c  bytes.c  conn-methods.c  containers.c  dbus_bindings-internal.h  float.c  int.c  message.c  module.c  pending-call.c  server.c  signature.c  string.c  unixfd.c
dbus_glib_bindings/: module.c
doc/: HACKING.txt
test/: dbus_py_test.c  test-client.py  test-p2p.py  test-server.py  test-service.py  test-standalone.py  with-session-bus.sh
tools/: ci-build.sh  ci-install.sh
